--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Update Index HTML
 
 on:
   schedule:
-    - cron: "0 */5 * * *"  # Runs every 5 hours
+    - cron: "0 */6 * * *"  # Runs every 6 hours
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   update-index:
@@ -20,7 +21,7 @@ jobs:
       - name: Install Requirements
         run: |
           python -m pip install --upgrade pip
-          pip install python-telegram-bot
+          pip install python-telegram-bot requests
 
       - name: Run Bot Script
         env:
@@ -33,6 +34,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add index.html
-          git commit -m "Update index.html with latest posts"
+          git add index.html public/data/posts.json
+          git commit -m "Update index.html and posts data with latest content"
           git push
