--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Requirements
         run: |
           python -m pip install --upgrade pip
-          pip install python-telegram-bot requests
+          pip install -r requirements.txt
 
       - name: Run Bot Script
         env:
@@ -30,7 +30,20 @@ jobs:
         run: |
           python bot/main.py
 
+      - name: Check for Changes
+        id: check_changes
+        run: |
+          changes=$(git status --porcelain | grep -E "index.html|public/data/posts.json")
+          if [ -z "$changes" ]; then
+            echo "No changes detected."
+            echo "changes_detected=false" >> $GITHUB_OUTPUT
+          else
+            echo "Changes detected: $changes"
+            echo "changes_detected=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: Commit and Push Changes
+        if: steps.check_changes.outputs.changes_detected == 'true'
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
